--- a/_sass/basscss/_base-typography.scss
+++ b/_sass/basscss/_base-typography.scss
@@ -3,7 +3,6 @@
 body {
   font-family: $font-family;
   line-height: $line-height;
-  overflow-wrap: break-word;
   font-size: 100%;
 }
 
